testsuite/poke.pkl/trim-diag-3.pk
/* { dg-do compile } */

defvar a = [1,2]["foo"..]; /* { dg-error "" } */
